--- a/Augustus/Augustus/Augustus.vcxproj
+++ b/Augustus/Augustus/Augustus.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="AmbushState.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="AnimationController.h" />
+    <ClInclude Include="BlinkModule.h" />
     <ClInclude Include="ChaseState.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="CollisionManager.h" />
@@ -183,12 +184,15 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="ExitState.h" />
     <ClInclude Include="FleeingState.h" />
+    <ClInclude Include="Font.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectData.h" />
     <ClInclude Include="GameStateData.h" />
     <ClInclude Include="Ghost.h" />
     <ClInclude Include="GhostAnimations.h" />
     <ClInclude Include="GhostSoundPicker.h" />
+    <ClInclude Include="Highscores.h" />
+    <ClInclude Include="HighscoreScreenState.h" />
     <ClInclude Include="IAnimationAble.h" />
     <ClInclude Include="IGame.h" />
     <ClInclude Include="IGameState.h" />
@@ -206,9 +210,11 @@
     <ClInclude Include="PlayerAnimations.h" />
     <ClInclude Include="GameSession.h" />
     <ClInclude Include="PlayingState.h" />
+    <ClInclude Include="PowerUp.h" />
     <ClInclude Include="RandomBehaviorState.h" />
     <ClInclude Include="RoamAtRandom_State.h" />
     <ClInclude Include="RunToHouse.h" />
+    <ClInclude Include="Score.h" />
     <ClInclude Include="SoundClip.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="StartAnimationState.h" />
@@ -229,6 +235,7 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TestEnemyObject.h" />
     <ClInclude Include="TestPlayerObject.h" />
+    <ClInclude Include="TextLoader.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="TitleScreenState.h" />
     <ClInclude Include="vect2.h" />
@@ -240,6 +247,7 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AnimationController.cpp" />
     <ClCompile Include="Augustus.cpp" />
+    <ClCompile Include="BlinkModule.cpp" />
     <ClCompile Include="ChaseState.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
@@ -249,12 +257,15 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="ExitState.cpp" />
     <ClCompile Include="FleeingState.cpp" />
+    <ClCompile Include="Font.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectData.cpp" />
     <ClCompile Include="GameStateData.cpp" />
     <ClCompile Include="Ghost.cpp" />
     <ClCompile Include="GhostAnimations.cpp" />
     <ClCompile Include="GhostSoundPicker.cpp" />
+    <ClCompile Include="Highscores.cpp" />
+    <ClCompile Include="HighscoreScreenState.cpp" />
     <ClCompile Include="IAnimationAble.cpp" />
     <ClCompile Include="ICollideable.cpp" />
     <ClCompile Include="IDrawable.cpp" />
@@ -279,9 +290,11 @@
     <ClCompile Include="PlayerAnimations.cpp" />
     <ClCompile Include="GameSession.cpp" />
     <ClCompile Include="PlayingState.cpp" />
+    <ClCompile Include="PowerUp.cpp" />
     <ClCompile Include="RandomBehaviorState.cpp" />
     <ClCompile Include="RoamAtRandom_State.cpp" />
     <ClCompile Include="RunToHouse.cpp" />
+    <ClCompile Include="Score.cpp" />
     <ClCompile Include="SoundClip.cpp" />
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Sprite.cpp" />
@@ -298,6 +311,7 @@
     <ClCompile Include="TestConcreteState.cpp" />
     <ClCompile Include="TestEnemyObject.cpp" />
     <ClCompile Include="TestPlayerObject.cpp" />
+    <ClCompile Include="TextLoader.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="TitleScreenState.cpp" />
     <ClCompile Include="vect2.cpp" />
