--- a/Augustus/Augustus/Augustus.vcxproj
+++ b/Augustus/Augustus/Augustus.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="AmbushState.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="AnimationController.h" />
+    <ClInclude Include="AttractScreenState.h" />
     <ClInclude Include="BlinkModule.h" />
     <ClInclude Include="ChaseState.h" />
     <ClInclude Include="Collider.h" />
@@ -183,8 +184,9 @@
     <ClInclude Include="DrawManager.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="ExitState.h" />
-    <ClInclude Include="FleeingState.h" />
+    <ClInclude Include="FleeingBehavior.h" />
     <ClInclude Include="Font.h" />
+    <ClInclude Include="FPS_Helper.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectData.h" />
     <ClInclude Include="GameStateData.h" />
@@ -192,20 +194,17 @@
     <ClInclude Include="GhostAnimations.h" />
     <ClInclude Include="GhostSoundPicker.h" />
     <ClInclude Include="Highscores.h" />
-    <ClInclude Include="HighscoreScreenState.h" />
     <ClInclude Include="IAnimationAble.h" />
     <ClInclude Include="IGame.h" />
     <ClInclude Include="IGameState.h" />
-    <ClInclude Include="IRoamingState.h" />
-    <ClInclude Include="IState_PDA.h" />
+    <ClInclude Include="IGhostState.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="LevelModifier.h" />
     <ClInclude Include="MovementModule.h" />
     <ClInclude Include="MusicClip.h" />
-    <ClInclude Include="Observer.h" />
     <ClInclude Include="PacmanGame.h" />
     <ClInclude Include="PathFinderModule.h" />
     <ClInclude Include="PauseModule.h" />
-    <ClInclude Include="PDA.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerAnimations.h" />
     <ClInclude Include="GameSession.h" />
@@ -214,11 +213,12 @@
     <ClInclude Include="RandomBehaviorState.h" />
     <ClInclude Include="RoamAtRandom_State.h" />
     <ClInclude Include="RunToHouse.h" />
+    <ClInclude Include="ScatterState.h" />
     <ClInclude Include="Score.h" />
+    <ClInclude Include="ScoreScreenState.h" />
     <ClInclude Include="SoundClip.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="StartAnimationState.h" />
-    <ClInclude Include="Subject.h" />
     <ClInclude Include="TestConcreteState.h" />
     <ClInclude Include="IDrawable.h" />
     <ClInclude Include="IEntity.h" />
@@ -237,7 +237,6 @@
     <ClInclude Include="TestPlayerObject.h" />
     <ClInclude Include="TextLoader.h" />
     <ClInclude Include="Tile.h" />
-    <ClInclude Include="TitleScreenState.h" />
     <ClInclude Include="vect2.h" />
     <ClInclude Include="WaitingState.h" />
     <ClInclude Include="WinAnimationState.h" />
@@ -246,6 +245,7 @@
     <ClCompile Include="AmbushState.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AnimationController.cpp" />
+    <ClCompile Include="AttractScreenState.cpp" />
     <ClCompile Include="Augustus.cpp" />
     <ClCompile Include="BlinkModule.cpp" />
     <ClCompile Include="ChaseState.cpp" />
@@ -256,8 +256,9 @@
     <ClCompile Include="DrawManager.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="ExitState.cpp" />
-    <ClCompile Include="FleeingState.cpp" />
+    <ClCompile Include="FleeingBehavior.cpp" />
     <ClCompile Include="Font.cpp" />
+    <ClCompile Include="FPS_Helper.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectData.cpp" />
     <ClCompile Include="GameStateData.cpp" />
@@ -265,27 +266,24 @@
     <ClCompile Include="GhostAnimations.cpp" />
     <ClCompile Include="GhostSoundPicker.cpp" />
     <ClCompile Include="Highscores.cpp" />
-    <ClCompile Include="HighscoreScreenState.cpp" />
     <ClCompile Include="IAnimationAble.cpp" />
     <ClCompile Include="ICollideable.cpp" />
     <ClCompile Include="IDrawable.cpp" />
     <ClCompile Include="IEntity.cpp" />
     <ClCompile Include="IGame.cpp" />
     <ClCompile Include="IGameState.cpp" />
+    <ClCompile Include="IGhostState.cpp" />
     <ClCompile Include="InputManager.cpp" />
-    <ClCompile Include="IRoamingState.cpp" />
     <ClCompile Include="IState.cpp" />
-    <ClCompile Include="IState_PDA.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="LevelModifier.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="MovementModule.cpp" />
     <ClCompile Include="MusicClip.cpp" />
-    <ClCompile Include="Observer.cpp" />
     <ClCompile Include="PacmanGame.cpp" />
     <ClCompile Include="PathFinderModule.cpp" />
     <ClCompile Include="PauseModule.cpp" />
-    <ClCompile Include="PDA.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerAnimations.cpp" />
     <ClCompile Include="GameSession.cpp" />
@@ -294,7 +292,9 @@
     <ClCompile Include="RandomBehaviorState.cpp" />
     <ClCompile Include="RoamAtRandom_State.cpp" />
     <ClCompile Include="RunToHouse.cpp" />
+    <ClCompile Include="ScatterState.cpp" />
     <ClCompile Include="Score.cpp" />
+    <ClCompile Include="ScoreScreenState.cpp" />
     <ClCompile Include="SoundClip.cpp" />
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Sprite.cpp" />
@@ -307,13 +307,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Subject.cpp" />
     <ClCompile Include="TestConcreteState.cpp" />
     <ClCompile Include="TestEnemyObject.cpp" />
     <ClCompile Include="TestPlayerObject.cpp" />
     <ClCompile Include="TextLoader.cpp" />
     <ClCompile Include="Tile.cpp" />
-    <ClCompile Include="TitleScreenState.cpp" />
     <ClCompile Include="vect2.cpp" />
     <ClCompile Include="WaitingState.cpp" />
     <ClCompile Include="WinAnimationState.cpp" />
